--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@babel/runtime": "^7.3.4",
     "bootstrap": "^4.3.1",
+    "cheerio": "^1.0.0-rc.3",
     "meteor-node-stubs": "^0.4.1",
     "mongodb": "^3.2.3",
     "node-telegram-bot-api": "^0.30.0"
