--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.3.4",
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^4.0.0-alpha.2",
     "cheerio": "^1.0.0-rc.3",
+    "datatables.net": "^1.10.19",
+    "datatables.net-bs": "^1.10.19",
     "meteor-node-stubs": "^0.4.1",
     "mongodb": "^3.2.3",
-    "node-telegram-bot-api": "^0.30.0"
+    "node-telegram-bot-api": "^0.30.0",
+    "node-webshot": "^1.0.3",
+    "table-scraper": "^0.1.0"
   },
   "meteor": {
     "mainModule": {
